<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PasswordShowerFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="3dp"
        android:src="@drawable/ic_baseline_lock_24"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/websiteShowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/websitedeneme"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/idShowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_d"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/passwordShowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/update"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/delete"
        android:layout_margin="10dp"
        />


</LinearLayout>