<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.PasswordAddingFragment"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <Spinner
        android:id="@+id/website_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:visibility="invisible">

    </Spinner>


    <EditText
        android:id="@+id/userWebsiteInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_website_name"
        android:layout_margin= "10dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/userIDInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_an_id"
        android:layout_margin= "10dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/userPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin= "10dp"
        android:hint="@string/enter_a_password"
        android:layout_gravity="center"/>



    <ImageView
        android:id="@+id/imageInput"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_add_to_photos_24"/>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_margin="10dp"


        />
</LinearLayout>
